--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,41 @@
+# Node.js
+/node_modules
+
+# Build artifacts
+/dist
+/build
+/out
+
+# Vite specific
+.vite/
+
 # Logs
-logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS and Editor specific files
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Test coverage
+/coverage
+
+# Local server configurations (if any)
+/server-config.json
+
+# Temporary files
+*~
+*#
+#*#/
+.cache/
